<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nocdib.justjava.MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_text_name_note"
        android:ems="10"
        android:id="@+id/nameText"  />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/edit_text_email_note"
        android:inputType="textEmailAddress"    />

    <TextView
        android:id="@+id/toppings_label"
        style="@style/HeaderTextStyle"
        android:text="@string/label_toppings"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:id="@+id/whippedCream"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_chocolate"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:id="@+id/chocolate"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_strawberries"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:id="@+id/strawberries"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_sprinkles"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/sprinkles"/>

    <TextView
        android:id="@+id/quantity_label"
        style="@style/HeaderTextStyle"
        android:text="@string/label_quantity"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"  >

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/button_text_increase"
            android:padding="0dp"
            android:id="@+id/increase"
            android:onClick="increaseQuantity"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#FF0000" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/button_text_decrease"
            android:padding="0dp"
            android:id="@+id/decrease"
            android:onClick="decreaseQuantity"/>

    </LinearLayout>

    <TextView
        android:id="@+id/order_summary_label"
        style="@style/HeaderTextStyle"
        android:text="@string/label_order_summary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:fillViewport="true"
        android:id="@+id/scrollView">
            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/order_summary_text"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000000" />
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_order"
            android:padding="0dp"
            android:onClick="submitOrder"   />

        <Button
            android:id="@+id/email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_email"
            android:onClick="composeEmail"
            android:enabled="false" />

    </LinearLayout>

</LinearLayout>
